--- a/testing.html
+++ b/testing.html
@@ -12,9 +12,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="portfolio.css">
-    <script src="videos.js"></script>
-    <script src="navbar.js"></script>
+    <link rel="stylesheet" href="~/css/portfolio.css">
+    <script src="~/js/videos.js"></script>
+    <script src="~/js/navbar.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
         <h1 id="title" class="text-center">Welcome to Javier's Portfolio</h1><br>
         <div class="contact-box">
             <h4 class="text-center">Feel Free To Contact or Connect with Me Below:</h4>
-            <div class="text-center"><span style="display: inline-block"><a href="mailto:javig56@gmail.com"><img class="icon" src="img/contactme/gmail-logo-icon.png"></a> <a href="mailto:javig56@gmail.com" class="contact">javig56@gmail.com</a></span> <span style="display: inline-block"><a href="https://www.linkedin.com/in/javier-gonzalez3/"><img class="icon" src="img/contactme/linkedin.png"></a> <a class="contact" href="https://www.linkedin.com/in/javier-gonzalez3/">javier-gonzalez3</a></span> <span style="display: inline-block"><a href="https://github.com/Jgonzalez3"><img class="icon" src="img/contactme/github.png"></a> <a class="contact" href="https://github.com/Jgonzalez3">Jgonzalez3</a></span> </div>
+            <div class="text-center"><span style="display: inline-block"><a href="mailto:javig56@gmail.com"><img class="icon" src="~/images/contactme/gmail-logo-icon.png"></a> <a href="mailto:javig56@gmail.com" class="contact">javig56@gmail.com</a></span> <span style="display: inline-block"><a href="https://www.linkedin.com/in/javier-gonzalez3/"><img class="icon" src="~/images/contactme/linkedin.png"></a> <a class="contact" href="https://www.linkedin.com/in/javier-gonzalez3/">javier-gonzalez3</a></span> <span style="display: inline-block"><a href="https://github.com/Jgonzalez3"><img class="icon" src="~/images/contactme/github.png"></a> <a class="contact" href="https://github.com/Jgonzalez3">Jgonzalez3</a></span> </div>
         </div>
     </div>
     <br><br>
@@ -53,19 +53,19 @@
             <h3 class="text-center">About Me....</h3>
             <p>Welcome, my name is Javier Gonzalez III. I am a Full Stack Web Developer proficient in C#, JavaScript and TypeScript languages looking for new opportunities to apply my talents and skills so I can improve or create web products, services, and applications for you or your company. I have a background in Financial Services, Housing Services, Social Services, and public policy. Native born Californian to immigrant Mexican mother, transplanted to Seattle in 2010 for college and have never left since. You gotta enjoy the Seattle clean air and green environment. Lovely place to live, especially during the summer.</p>
         </div>
-        <img id="spaceNeedle" src="img/aboutme/seattle_spaceneedle.jpg">
-        <img id="hollywood" src="img/aboutme/california_hollywood.jpg">
+        <img id="spaceNeedle" src="~/images/aboutme/seattle_spaceneedle.jpg">
+        <img id="hollywood" src="~/images/aboutme/california_hollywood.jpg">
         <div id="aboutMeEducation">
             <h3 class="text-center">Education</h3>
             <p>Received my B.A. from the University of Washington in Seattle, WA. Go Huskies! Then a few years later I received a Certificate in Web Development from Coding Dojo. At Coding Dojo I learned Front-end technologies such as HTML, CSS, JavaScript, Bootstrap, jQuery, and AJAX plus 3 Full Stacks with Python/Django, C#/ASP.NET Core, and MEAN. Developed 3 projects with a team with each full stack, all which will be showcased below and can be found on my <a href="https://github.com/Jgonzalez3">GitHub</a>, please feel free to see all my other projects on GitHub, otherwise my best projects thus far are below.</p>
         </div>
-        <img id="huskies" src="img/aboutme/UW_Huskies_stadium700x400.png">
+        <img id="huskies" src="~/images/aboutme/UW_Huskies_stadium700x400.png">
         <div id="aboutMePostCollege">
             <h3 class="text-center">Post College...</h3>
             <p>After College I found employment with the goverment working in Social Services trying to be a part of something greater than myself, wanting to help those in need and who are less fortunate in today's socio-economic environment. Discovered after a few years that social services can be a rather taxing job, thats when I decided to make an educational choice to purse technology skills training, highly in demand skills, or one of my favorite subjects Finance/Investing. After careful consideration and analysis, I stuck with programming since such skills will be needed in the near future as they are in todays society. Not to mention the career path is rather lucrative and lots of potential growth, thus creating many opportunities for new businesses, upward mobility, and high wages.</p>
         </div>
-        <img id="codeBlock" src="img/aboutme/code.jpg">
-        <img id="money" src="img/aboutme/money.jpg">
+        <img id="codeBlock" src="~/images/aboutme/code.jpg">
+        <img id="money" src="~/images/aboutme/money.jpg">
         <div id="aboutMeHobbies">
             <h3 class="text-center">Hobbies</h3>
             <p>My favorite hobbies are: Sports, Web Development, Finance. Sports is my number 1 with my favorite being football, Go Huskies!! Go Packers!! followed by basketball then soccer.
@@ -84,7 +84,7 @@
         <br>
         <div class="projectvideo">
             <video id="Wanderlust" width="950"  autoplay loop>
-                <source src="Wanderlust.mp4" type="video/mp4">
+                <source src="~/videos/Wanderlust.mp4" type="video/mp4">
             </video>
         </div>
         <div class="projectinfo">
@@ -114,12 +114,12 @@
         </div>
         <div class="projectvideo">
             <video id="FunRooms" width="950" autoplay loop>
-                <source src="FunRooms.mp4" type="video/mp4">
+                <source src="~/videos/FunRooms.mp4" type="video/mp4">
             </video>
         </div>
         <div class="projectvideo">
             <video id="ActivityCenter" width="950" autoplay loop>
-                <source src="DojoActivityCenter.mp4" type="video/mp4">
+                <source src="~/videos/DojoActivityCenter.mp4" type="video/mp4">
             </video>
         </div>
         <div class="projectinfo">
@@ -148,7 +148,7 @@
         </div>
         <div class="projectvideo">
             <video id="ECommerce" width="950"  autoplay loop>
-                <source src="NetCore_ecommerce.mp4" type="video/mp4">
+                <source src="~/videos/NetCore_ecommerce.mp4" type="video/mp4">
             </video>
         </div>
     </div>
@@ -162,37 +162,37 @@
             <div class="col-md-3 text-center">
                 <h4>Languages</h4>
                 <hr>
-                <a href="https://www.javascript.com/"><img class="techicons" src="img/techicons/JavaScript.png"></a>
-                <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/"><img class="techicons" src="img/techicons/c-sharp.png"></a>
-                <a href="https://www.typescriptlang.org/"><img class="techicons" src="img/techicons/typescript.png"></a>
-                <a href=""><img class="techicons" src="img/techicons/python.png"></a>
-                <a href="https://www.w3.org/html/"><img class="techicons" src="img/techicons/HTML.png"></a>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img class="techicons" src="img/techicons/CSS.png"></a>
+                <a href="https://www.javascript.com/"><img class="techicons" src="~/images/techicons/JavaScript.png"></a>
+                <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/"><img class="techicons" src="~/images/techicons/c-sharp.png"></a>
+                <a href="https://www.typescriptlang.org/"><img class="techicons" src="~/images/techicons/typescript.png"></a>
+                <a href=""><img class="techicons" src="~/images/techicons/python.png"></a>
+                <a href="https://www.w3.org/html/"><img class="techicons" src="~/images/techicons/HTML.png"></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img class="techicons" src="~/images/techicons/CSS.png"></a>
             </div>
             <div class="col-md-3 text-center">
                 <h4>FrameWorks</h4>
                 <hr>
-                <a href="https://expressjs.com/"><img class="techicons" src="img/techicons/expressjs.png"></a>
-                <a href="https://docs.microsoft.com/en-us/aspnet/"><img class="techicons" src="img/techicons/netcore.svg"></a>
-                <a href="https://angular.io/"><img class="techicons" src="img/techicons/angular.png"></a>
-                <a href="https://getbootstrap.com/"><img class="techicons" src="img/techicons/bootstrap.png"></a>
-                <a href="https://www.djangoproject.com/"><img class="techicons" src="img/techicons/django.png"></a>
+                <a href="https://expressjs.com/"><img class="techicons" src="~/images/techicons/expressjs.png"></a>
+                <a href="https://docs.microsoft.com/en-us/aspnet/"><img class="techicons" src="~/images/techicons/netcore.svg"></a>
+                <a href="https://angular.io/"><img class="techicons" src="~/images/techicons/angular.png"></a>
+                <a href="https://getbootstrap.com/"><img class="techicons" src="~/images/techicons/bootstrap.png"></a>
+                <a href="https://www.djangoproject.com/"><img class="techicons" src="~/images/techicons/django.png"></a>
             </div>
             <div class="col-md-3 text-center">
                 <h4>Databases</h4>
                 <hr>
-                <a href="https://www.mysql.com/"><img class="techicons" src="img/techicons/mysql.png"></a>
-                <a href="https://www.mongodb.com/"><img class="techicons" src="img/techicons/mongodb.png"></a>
-                <a href="https://www.postgresql.org/"><img class="techicons" src="img/techicons/postgresql.png"></a>
-                <a href="https://www.sqlite.org/index.html"><img class="techicons" src="img/techicons/sqlite.png"></a>
+                <a href="https://www.mysql.com/"><img class="techicons" src="~/images/techicons/mysql.png"></a>
+                <a href="https://www.mongodb.com/"><img class="techicons" src="~/images/techicons/mongodb.png"></a>
+                <a href="https://www.postgresql.org/"><img class="techicons" src="~/images/techicons/postgresql.png"></a>
+                <a href="https://www.sqlite.org/index.html"><img class="techicons" src="~/images/techicons/sqlite.png"></a>
             </div>
             <div class="col-md-3 text-center">
                 <h4>Technologies</h4>
                 <hr>
-                <a href="https://nodejs.org/en/"><img class="techicons" src="img/techicons/nodejs.png"></a>
-                <a href="http://jquery.com/"><img class="techicons" src="img/techicons/jQuery.png"></a>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX/Getting_Started"><img class="techicons" src="img/techicons/ajax.png"></a>
-                <a href="https://socket.io/"><img class="techicons" src="img/techicons/socket.png"></a>
+                <a href="https://nodejs.org/en/"><img class="techicons" src="~/images/techicons/nodejs.png"></a>
+                <a href="http://jquery.com/"><img class="techicons" src="~/images/techicons/jQuery.png"></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX/Getting_Started"><img class="techicons" src="~/images/techicons/ajax.png"></a>
+                <a href="https://socket.io/"><img class="techicons" src="~/images/techicons/socket.png"></a>
             </div>
         </div>
     </div>
@@ -204,9 +204,9 @@
                 <h5 class="text-center text-light">Seattle, WA</h5>
                 <h6 class="text-center text-light">Contact Me:</h6>
                 <div id="footercontact" class="text-center">
-                    <li><a href="mailto:javig56@gmail.com"><img class="icon" src="img/contactme/gmail-logo-icon.png"></a> <a href="mailto:javig56@gmail.com" class="contact">javig56@gmail.com</a>
-                    <li><a href="https://www.linkedin.com/in/javier-gonzalez3/"><img class="icon" src="img/contactme/linkedin.png"></a><a class="contact" href="https://www.linkedin.com/in/javier-gonzalez3/">javier-gonzalez3</a></li> 
-                    <li><a href="https://github.com/Jgonzalez3"><img class="icon" src="img/contactme/github.png"></a><a href="https://github.com/Jgonzalez3">Jgonzalez3</a></li>
+                    <li><a href="mailto:javig56@gmail.com"><img class="icon" src="~/images/contactme/gmail-logo-icon.png"></a> <a href="mailto:javig56@gmail.com" class="contact">javig56@gmail.com</a>
+                    <li><a href="https://www.linkedin.com/in/javier-gonzalez3/"><img class="icon" src="~/images/contactme/linkedin.png"></a><a class="contact" href="https://www.linkedin.com/in/javier-gonzalez3/">javier-gonzalez3</a></li> 
+                    <li><a href="https://github.com/Jgonzalez3"><img class="icon" src="~/images/contactme/github.png"></a><a href="https://github.com/Jgonzalez3">Jgonzalez3</a></li>
                     </div>
             </div>
             <div class="col-sm-6" style="height: 100%;">
